got a good outline for contact section, design skills are improving

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 			<div class='flexchild'>
 				<h1 class='feskills'>Contact<br>Me</h1>
-				<img src="images/paper-plane.svg" class='watermark'>
+				<img src="images/loaf-message-3.svg" class='watermark'>
 			</div>
 
 			<div class="nextdiv"><a href='#'>
