--- a/recent.html
+++ b/recent.html
@@ -27,7 +27,7 @@
 
 			<div class='flexchild'>
 				<h1 class='feskills'>Recent<br>Work</h1>
-				<img src="images/settings.svg" class='watermark'>
+				<img src="images/settings.svg" class='watermark-recent'>
 			</div>
 
 			<div class="nextdiv"><a href='#'>
