seperated files again, organized quite a bit, added readme file

--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
 	<section class="flex">
 		<div class='flexchild'>
 			<h1 class='feskills'>Front<br>End<br>Skills</h1>
-					<img src="images/settings.svg" class='watermark'>
+					<img src="images/settings.svg" class='watermark-skill'>
 		</div>
 
 		<div class="flexchild addMargin">
