--- a/recent.html
+++ b/recent.html
@@ -13,14 +13,13 @@
 				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
     					<div class="carousel-item active">
-			      			<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
-    					</div>
+<!-- 			      			<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
+ -->    					</div>
+    					<div class="carousel-item">	 			      			                                                     	<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
+   						</div>
     					<div class="carousel-item">
-			      			<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
-    					</div>
-    					<div class="carousel-item">
-			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
-    					</div>
+<!-- 			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
+ -->    					</div>
   					</div>
 				</div>
 			</div>
