--- a/main.html
+++ b/main.html
@@ -45,5 +45,20 @@
               <img class='next' src="images/next.svg"></a>
           </section>
 
+          <video playsinline autoplay muted loop poster="images/video.mp4" id="bgvid">
+            <source src="images/video.mp4" type="video/mp4">
+          </video>
+
 </body>
+
+<script>
+
+    const play = () = > {
+    var vid = document.getElementById("bgvid");
+    vid.playbackRate = 0.2;
+  }
+
+  window.onload = play();
+
+</script>
 </html>
