--- a/recent.html
+++ b/recent.html
@@ -33,6 +33,10 @@
 				<img class='next' src="images/next.svg"></a>
 			</div>
 
+		  <video playsinline autoplay muted loop poster="images/vidorange.mp4" id="bgvid">
+            <source src="images/vidorange.mp4" type="video/mp4">
+          </video>
+
   </section>
 </body>
 </html>
