fixed bootstrap issues, clarified instructions on readme

--- a/recent.html
+++ b/recent.html
@@ -2,24 +2,26 @@
 <html>
 <head>
 	<title>--</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/recent.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</head>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- 	<script src="js/video.js" async defer></script>
+ --></head>
 <body>
 	<section class="flex">
 
 			<div class="flexchild">
 				<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
-    					<div class="carousel-item active">
-<!-- 			      			<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
- -->    					</div>
+    					<div class="carousel-item active">													 			      			<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
+    					</div>
     					<div class="carousel-item">	 			      			                                                     	<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
    						</div>
     					<div class="carousel-item">
-<!-- 			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
- -->    					</div>
+ 			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
+    					</div>
   					</div>
 				</div>
 			</div>
@@ -33,9 +35,11 @@
 				<img class='next' src="images/next.svg"></a>
 			</div>
 
-		  <video playsinline autoplay muted loop poster="images/vidorange.mp4" id="bgvid">
-            <source src="images/vidorange.mp4" type="video/mp4">
-          </video>
+        <!--   <video playsinline autoplay muted loop poster="images/smoke.mov" id="bgvid">
+            <source src="images/smoke.mov" type="smoke.mov">
+          </video>  -->
+
+          <video playsinline autoplay muted loop id="bgvid" src="images/smoke.mov"></video>
 
   </section>
 </body>
