much needed major changes and better, more level-headed decisions, continue on this path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>--</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/skills.css">
   <script src="js/main.js" async defer></script>
   <script src="js/video.js" async defer></script>
 </head>
@@ -18,7 +17,7 @@
                     <div class="cube-image"><img src='images/kwall.png' style="height: 22vh;"></div>
                   </div>
                   <div class="side">
-                    <div class="cube-image"><a href='#formsect'><img src='images/smartphone.png' class='cubeImg' style="padding-right: 1.4rem;"><p class='subtext padd'>Contact Me</p></a></div>
+                    <div class="cube-image"><a href='contact.html'><img src='images/smartphone.png' class='cubeImg' style="padding-right: 1.4rem;"><p class='subtext padd'>Contact Me</p></a></div>
                   </div>
                   <div class="side">
                     <div class="cube-image"><p class='newText'>Front End <br>Developer</p></div>
@@ -27,7 +26,7 @@
                     <div class="cube-image"><p class='newText'>Ken Wall</p></div>
                   </div>
                   <div class="side">
-                    <div class="cube-image"><a href='#skillsect'><img src='images/info.png' class='cubeImg'><p class='subtext padd'>More Info</p></a></div>
+                    <div class="cube-image"><a href='skills.html'><img src='images/info.png' class='cubeImg'><p class='subtext padd'>More Info</p></a></div>
                   </div>
                   <div class="side">
                     <div class="cube-image active"><a href='writings.html'><img src='images/typewriter.png' class='cubeImg'><p class='subtext padd'>Writings</p></a></div>
@@ -41,9 +40,10 @@
             </div>
 
             <nav class="classicNav">
-              <li><a href='#'>Skills</a></li>
-              <li><a href='#'>Recent Work</a></li>
-              <li><a href='#'>Contact</a></li>
+              <img src="images/delete.svg" id='closeNav'>
+              <li><a href='skills.html'>Skills</a></li>
+              <li><a href='recent.html'>Recent Work</a></li>
+              <li><a href='contact.html'>Contact</a></li>
               <li><a href='#'>Writings</a></li>
               <li><a href='#'>Resources</a></li>
             </nav>
