--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,12 @@
 	<link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="skills.html">Skills/Services</a>
+		<a href="recent.html">Recent Work</a>
+		<a href="contact.html" class='active'>Contact</a>
+	</nav>
 	<section class="flex">
 
 			<div class="flexchild">
