--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,12 @@
 	<title>Skills Section</title>
 </head>
 <body>
+	<nav>
+		<a href="index.html">Home</a>
+		<a href="skills.html" class='active'>Skills/Services</a>
+		<a href="recent.html">Recent Work</a>
+		<a href="contact.html">Contact</a>
+	</nav>
 	<section class="flex">
 		<div class='flexchild'>
 			<h1 class='feskills'>Front<br>End<br>Skills</h1>
@@ -54,7 +60,7 @@
 		      <input type="radio" name="orientation" value="vertical" />
 		      vertical
 		    </label>
-		  </p> 
+		  </p>
 		</div>
 		</div>
 		<div class="nextdiv"><a href='#'><img class='next' src="images/next.svg"></a></div>
