--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,9 @@
 	    	</form>
 			</div>
 
-			<div class='flexchild'>
+			<div class='flexchild watermark' style="background-image: url('images/loaf-message-3.svg'); background-repeat: no-repeat;">
 				<h1 class='feskills'>Contact<br>Me</h1>
-				<img src="images/loaf-message-3.svg" class='watermark'>
-			</div>
-
-			<div class="nextdiv"><a href='#'>
-				<img class='next' src="images/next.svg"></a>
+				<!-- <img src="images/loaf-message-3.svg" class='watermark'> -->
 			</div>
 
   </section>
