minor fixes to home page, putting watermark image to the side for now (on contact page. publish site without it

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>--</title>
+	<title>Ken Wall | Contact</title>
 	<link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
@@ -27,8 +27,10 @@
 	    	</form>
 			</div>
 
-			<div class='flexchild watermark' style="background-image: url('images/loaf-message-3.svg'); background-repeat: no-repeat;">
-				<h1 class='feskills'>Contact<br>Me</h1>
+			<div class='flexchild'>
+					<div class='watermark'></div>
+					<h1 class='feskills'>Contact<br>Me</h1>
+				</div>
 				<!-- <img src="images/loaf-message-3.svg" class='watermark'> -->
 			</div>
 
