improved design of skills page

--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/skills.css">
 	<script src="js/skills.js"></script>
-	<title>Skills Section</title>
+	<title>Ken Wall | Front End Developer</title>
 </head>
 <body>
 	<nav>
@@ -30,12 +30,6 @@
 			    <div class="carousel__cell"><img src="images/git(1).png" style='height: 1.5em';></div>
 			    <div class="carousel__cell"><img src="images/bootstrap.png" style='height: 1.8em';></div>
 			    <div class="carousel__cell"><img src="images/ruby.png" style='height: 1.5em';></div>
-			    <div class="carousel__cell">10</div>
-			    <div class="carousel__cell">11</div>
-			    <div class="carousel__cell">12</div>
-			    <div class="carousel__cell">13</div>
-			    <div class="carousel__cell">14</div>
-			    <div class="carousel__cell">15</div>
 		  </div>
 		</div>
 
