--- a/recent.html
+++ b/recent.html
@@ -13,16 +13,25 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="skills.html">Skills/Services</a>
-		<a href="recent.html" class='active'>Recent Work</a>
+		<a href="recent.html" class='activeNav'>Recent Work</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<section class="flex">
 			<div class="flexchild">
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
-    					<div class="carousel-item active">													 			      			<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
+    					<div class="carousel-item active">
+								<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
+								<div class='description'><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+									 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+									 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+									 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+									 nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+									 officia deserunt mollit anim id est laborum.</p>
+								</div>
     					</div>
-    					<div class="carousel-item">	 			      			                                                     	<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
+    					<div class="carousel-item">
+								<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
    						</div>
     					<div class="carousel-item">
  			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
@@ -50,7 +59,7 @@
           	https://pixabay.com/videos/background-texture-green-blue-18555/
           -->
   </section>
-	<img src="images/settings.svg" class='watermark-recent'>
+	<!-- <img src="images/settings.svg" class='watermark-recent'> -->
 
 </body>
 </html>
