necessary changes to recent work, particularly the carousel

--- a/recent.html
+++ b/recent.html
@@ -21,20 +21,32 @@
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
     					<div class="carousel-item active">
-								<img class="d-block w-100" src="images/bourdain.png" alt="Second slide" style="height: 400px;">
-								<div class='description'><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-									 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-									 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-									 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-									 nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-									 officia deserunt mollit anim id est laborum.</p>
+								<img class="d-block w-100" src="images/cook-now.png" alt="First slide" style="height: 400px;">
+								<div class='description'><p>A full stack rails app that finds recipes from around the web using 
+									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/'>app</a> or the 
+									<a href='https://github.com/tsaiyuen/cooknow'>code.</a></p>
 								</div>
     					</div>
     					<div class="carousel-item">
-								<img class="d-block w-100" src="images/darkMode.png" alt="First slide" style="height: 400px;">
+								<img class="d-block w-100" src="images/coffee-mkt.png" alt="Second slide" style="height: 400px;">
+								<div class='description'><p>A full stack rails app that finds recipes from around the web using 
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+								</div>
    						</div>
     					<div class="carousel-item">
- 			     			<img class="d-block w-100" src="images/todo.png" alt="Third slide" style="height: 400px;">
+ 			     			<img class="d-block w-100" src="images/vue-bootcamp.png" alt="Third slide" style="height: 400px;">
+ 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using 
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+								</div>
+    					</div>
+    					<div class="carousel-item">
+ 			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 400px;">
+ 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using 
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+								</div>
     					</div>
   					</div>
 						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -51,15 +63,15 @@
 			<div class='flexchild'>
 				<h1 class='feskills'>Recent<br>Work</h1>
 			</div>
-        <!--   <video playsinline autoplay muted loop poster="images/smoke.mov" id="bgvid">
+  </section>
+	<!-- <img src="images/settings.svg" class='watermark-recent'> -->
+
+</body>
+	       <!--   <video playsinline autoplay muted loop poster="images/smoke.mov" id="bgvid">
             <source src="images/smoke.mov" type="smoke.mov">
           </video>  -->
 
           <!-- if you end up needing a background, try this one :
           	https://pixabay.com/videos/background-texture-green-blue-18555/
           -->
-  </section>
-	<!-- <img src="images/settings.svg" class='watermark-recent'> -->
-
-</body>
 </html>
