--- a/recent.html
+++ b/recent.html
@@ -21,30 +21,30 @@
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
     					<div class="carousel-item active">
-								<img class="d-block w-100" src="images/cook-now.png" alt="First slide" style="height: 400px;">
-								<div class='description'><p>A full stack rails app that finds recipes from around the web using 
-									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/'>app</a> or the 
-									<a href='https://github.com/tsaiyuen/cooknow'>code.</a></p>
+								<img class="d-block w-100" src="images/cook-now.png" alt="First slide" style="height: 500px;">
+								<div class='description'><p>A full stack rails app that finds recipes from around the web using
+									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/' class='descLink'>app</a> or the
+									<a href='https://github.com/tsaiyuen/cooknow' class='descLink'>code.</a></p>
 								</div>
     					</div>
     					<div class="carousel-item">
-								<img class="d-block w-100" src="images/coffee-mkt.png" alt="Second slide" style="height: 400px;">
-								<div class='description'><p>A full stack rails app that finds recipes from around the web using 
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+								<img class="d-block w-100" src="images/coffee-mkt.png" alt="Second slide" style="height: 500px;">
+								<div class='description'><p>A full stack rails app that finds recipes from around the web using
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
 								</div>
    						</div>
     					<div class="carousel-item">
- 			     			<img class="d-block w-100" src="images/vue-bootcamp.png" alt="Third slide" style="height: 400px;">
- 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using 
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+ 			     			<img class="d-block w-100" src="images/vue-bootcamp.png" alt="Third slide" style="height: 500px;">
+ 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
 								</div>
     					</div>
     					<div class="carousel-item">
- 			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 400px;">
- 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using 
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the 
+ 			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 500px;">
+ 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using
+									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
 								</div>
     					</div>
@@ -58,6 +58,7 @@
 							<span class="sr-only">Next</span>
 						</a>
 				</div>
+				<p class='subtext'>hover over image for a description of the project</p>
 			</div>
 
 			<div class='flexchild'>
@@ -65,7 +66,11 @@
 			</div>
   </section>
 	<!-- <img src="images/settings.svg" class='watermark-recent'> -->
-
+<script>
+	$('.carousel').carousel({
+	interval: 5000
+	})
+</script>
 </body>
 	       <!--   <video playsinline autoplay muted loop poster="images/smoke.mov" id="bgvid">
             <source src="images/smoke.mov" type="smoke.mov">
