--- a/recent.html
+++ b/recent.html
@@ -22,7 +22,9 @@
   					<div class="carousel-inner">
     					<div class="carousel-item active">
 								<img class="d-block w-100" src="images/cook-now.png" alt="First slide" style="height: 500px;">
-								<div class='description'><p>A full stack rails app that finds recipes from around the web using
+								<div class='description'>
+									<h2 class='bb'>Cook Now</h2><br
+									<p>A full stack rails app that finds recipes from around the web using
 									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/' class='descLink'>app</a> or the
 									<a href='https://github.com/tsaiyuen/cooknow' class='descLink'>code.</a></p>
 								</div>
@@ -46,6 +48,12 @@
  			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using
 									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+								</div>
+    					</div>
+							<div class="carousel-item">
+ 			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 500px;">
+ 			     				<div class='description'><h2 class='bb'>UI Library</h2><br><p>UI components I am creating for quick reusability and to create
+										a personal style that is consistent across projects. Work in progress. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
 								</div>
     					</div>
   					</div>
