more changes to recent work page, nearly there

--- a/recent.html
+++ b/recent.html
@@ -23,7 +23,7 @@
     					<div class="carousel-item active">
 								<img class="d-block w-100" src="images/cook-now.png" alt="First slide" style="height: 500px;">
 								<div class='description'>
-									<h2 class='bb'>Cook Now</h2><br
+									<h2 class='bb'>Cook Now</h2><br>
 									<p>A full stack rails app that finds recipes from around the web using
 									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/' class='descLink'>app</a> or the
 									<a href='https://github.com/tsaiyuen/cooknow' class='descLink'>code.</a></p>
@@ -31,31 +31,50 @@
     					</div>
     					<div class="carousel-item">
 								<img class="d-block w-100" src="images/coffee-mkt.png" alt="Second slide" style="height: 500px;">
-								<div class='description'><p>A full stack rails app that finds recipes from around the web using
+								<div class='description'>
+									<h2 class='bb'>Coffee Marketplace</h2><br>
+									<p>A full stack rails app that finds recipes from around the web using
 									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
 								</div>
    						</div>
     					<div class="carousel-item">
  			     			<img class="d-block w-100" src="images/vue-bootcamp.png" alt="Third slide" style="height: 500px;">
- 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using
+ 			     				<div class='description'>
+									<h2 class='bb'>Vue JS Bootcamp</h2><br>
+									<p>A full stack rails app that finds recipes from around the web using
 									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
 									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
-								</div>
+									</div>
     					</div>
     					<div class="carousel-item">
  			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 500px;">
- 			     				<div class='description'><p>A full stack rails app that finds recipes from around the web using
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
-									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+ 			     				<div class='description'>
+										<h2 class='bb'>Prospectus</h2><br>
+										<p>A full stack rails app that finds recipes from around the web using
+											only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
+											<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
 								</div>
     					</div>
 							<div class="carousel-item">
- 			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 500px;">
+ 			     			<img class="d-block w-100" src="images/ui-library.png" alt="Fourth slide" style="height: 500px;">
  			     				<div class='description'><h2 class='bb'>UI Library</h2><br><p>UI components I am creating for quick reusability and to create
 										a personal style that is consistent across projects. Work in progress. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
 								</div>
     					</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="images/lewagon.png" alt="Fourth slide" style="height: 500px;">
+									<div class='description'><h2 class='bb'>Fullstack Challenges</h2><br><p>UI components I am creating for quick reusability and to create
+										a personal style that is consistent across projects. Work in progress. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
+								</div>
+							</div>
+							<div class="carousel-item">
+								<img class="d-block w-100" src="images/ui-design.png" alt="Fourth slide" style="height: 500px;">
+									<div class='description'><h2 class='bb'>UI Design Bootcamp</h2><br><p>A bootcamp I recently completed focusing
+									on UI Design. Topics covered include: UI fundamentals, landing page layout, different approaches
+									for responsive development, gradients, shadows, forms, animations, and many more. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
+								</div>
+							</div>
   					</div>
 						<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 							<span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -76,7 +95,7 @@
 	<!-- <img src="images/settings.svg" class='watermark-recent'> -->
 <script>
 	$('.carousel').carousel({
-	interval: 200000
+		interval: 8000
 	})
 </script>
 </body>
