--- a/recent.html
+++ b/recent.html
@@ -42,18 +42,17 @@
  			     			<img class="d-block w-100" src="images/vue-bootcamp.png" alt="Third slide" style="height: 500px;">
  			     				<div class='description'>
 									<h2 class='bb'>Vue JS Bootcamp</h2><br>
-									<p>A full stack rails app that finds recipes from around the web using
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
-									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+									<p>A complete introduction to Vue JS, covering the following topics: basics, template syntax,
+									components, events, instance lifecyle, vue router, Vuex, and more.</p>
 									</div>
     					</div>
     					<div class="carousel-item">
  			     			<img class="d-block w-100" src="images/prospectus.png" alt="Fourth slide" style="height: 500px;">
  			     				<div class='description'>
 										<h2 class='bb'>Prospectus</h2><br>
-										<p>A full stack rails app that finds recipes from around the web using
-											only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
-											<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+										<p>A goal setting app that I am currently working on. The purpose of this app is to make long
+											term goals easier to attain by breaking them down into subtasks each month, and having a review
+											system to help users learn from their errors. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>project</a></p>
 								</div>
     					</div>
 							<div class="carousel-item">
@@ -64,8 +63,9 @@
     					</div>
 							<div class="carousel-item">
 								<img class="d-block w-100" src="images/lewagon.png" alt="Fourth slide" style="height: 500px;">
-									<div class='description'><h2 class='bb'>Fullstack Challenges</h2><br><p>UI components I am creating for quick reusability and to create
-										a personal style that is consistent across projects. Work in progress. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
+									<div class='description'><h2 class='bb'>Fullstack Challenges</h2><br><p>Challenges completed during
+										9-week intensive bootcamp Le Wagon. Modules include Ruby, OOP, Databases, Front End with vanilla JS,
+										and Ruby on Rails. <a href='https://github.com/kwall925/fullstack-challenges' class='descLink'> view project</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
