began responsive design

--- a/recent.html
+++ b/recent.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Recent Work by Ken Wall</title>
+	<meta name="description" content="Recent work done by Ken Wall, front end developer. Work done in HTML, CSS, Javascript, Vue js, and UI design."/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/recent.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -25,17 +26,16 @@
 								<div class='description'>
 									<h2 class='bb'>Cook Now</h2><br>
 									<p>A full stack rails app that finds recipes from around the web using
-									only the ingredients that you have. View the <a href='https://cooknow-ckt.herokuapp.com/' class='descLink'>app</a> or the
-									<a href='https://github.com/tsaiyuen/cooknow' class='descLink'>code.</a></p>
+									only the ingredients that you have.</p><br>
+									<a href='https://github.com/tsaiyuen/cooknow' class='main-btn'>view project</a>
 								</div>
     					</div>
     					<div class="carousel-item">
 								<img class="d-block w-100" src="images/coffee-mkt.png" alt="Second slide" style="height: 500px;">
 								<div class='description'>
 									<h2 class='bb'>Coffee Marketplace</h2><br>
-									<p>A full stack rails app that finds recipes from around the web using
-									only the ingredients that you have. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>app</a> or the
-									<a href='https://github.com/tsaiyuen/coffee_marketplace'>code.</a></p>
+									<p>A full stack rails app that provides functionality for buying and selling coffee, and connecting with other users.</p><br>
+									<a href='https://github.com/tsaiyuen/coffee_marketplace' class='main-btn'>view project</a>
 								</div>
    						</div>
     					<div class="carousel-item">
@@ -52,20 +52,20 @@
 										<h2 class='bb'>Prospectus</h2><br>
 										<p>A goal setting app that I am currently working on. The purpose of this app is to make long
 											term goals easier to attain by breaking them down into subtasks each month, and having a review
-											system to help users learn from their errors. View the <a href='https://coffee-marketplace-ckt.herokuapp.com/'>project</a></p>
+											system to help users learn from their errors.</p><br><a href='https://github.com/kwall925/prospectus' class='main-btn'>view project</a>
 								</div>
     					</div>
 							<div class="carousel-item">
  			     			<img class="d-block w-100" src="images/ui-library.png" alt="Fourth slide" style="height: 500px;">
  			     				<div class='description'><h2 class='bb'>UI Library</h2><br><p>UI components I am creating for quick reusability and to create
-										a personal style that is consistent across projects. Work in progress. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
+										a personal style that is consistent across projects. Work in progress.</p> <br><a href='https://github.com/kwall925/ui-library' class='main-btn'> view project</a>
 								</div>
     					</div>
 							<div class="carousel-item">
 								<img class="d-block w-100" src="images/lewagon.png" alt="Fourth slide" style="height: 500px;">
 									<div class='description'><h2 class='bb'>Fullstack Challenges</h2><br><p>Challenges completed during
 										9-week intensive bootcamp Le Wagon. Modules include Ruby, OOP, Databases, Front End with vanilla JS,
-										and Ruby on Rails. <a href='https://github.com/kwall925/fullstack-challenges' class='descLink'> view project</a></p>
+										and Ruby on Rails.</p><br><a href='https://www.lewagon.com/web-development-course/full-time#curriculum' class='main-btn'> view project</a>
 								</div>
 							</div>
 							<div class="carousel-item">
