responsive looking good for now

--- a/recent.html
+++ b/recent.html
@@ -18,7 +18,8 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<section class="flex">
-			<div class="flexchild">
+			<div class="flexchild uno">
+				<h2 class='carousel-head'>Recent Work</h2>
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   					<div class="carousel-inner">
     					<div class="carousel-item active">
@@ -88,7 +89,7 @@
 				<p class='subtext'>hover over image for a description of the project</p>
 			</div>
 
-			<div class='flexchild'>
+			<div class='flexchild dois'>
 				<h1 class='feskills'>Recent<br>Work</h1>
 			</div>
   </section>
