--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>--</title>
+  <title>Ken Wall | Front End Developer</title>
+  <meta name="description" content="Recent work done by Ken Wall, front end developer. Work done in HTML, CSS, Javascript, Vue js, and UI design."/>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/main.js" async defer></script>
   <script src="js/video.js" async defer></script>
@@ -44,6 +45,7 @@
               <li><a href='skills.html'>Skills</a></li>
               <li><a href='recent.html'>Recent Work</a></li>
               <li><a href='contact.html'>Contact</a></li>
+              <li><a href='contact.html'>Resources</a></li>
             </nav>
             <!--<div class="nextdiv"><a href='#'>
               <img class='next' src="images/next.svg"></a>-->
