--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               <li><a href='skills.html'>Skills</a></li>
               <li><a href='recent.html'>Recent Work</a></li>
               <li><a href='contact.html'>Contact</a></li>
-              <li><a href='contact.html'>Resources</a></li>
+              <!-- <li><a href='contact.html'>Resources</a></li> -->
             </nav>
             <!--<div class="nextdiv"><a href='#'>
               <img class='next' src="images/next.svg"></a>-->
