--- a/recent.html
+++ b/recent.html
@@ -44,7 +44,8 @@
  			     				<div class='description'>
 									<h2 class='bb'>Vue JS Bootcamp</h2><br>
 									<p>A complete introduction to Vue JS, covering the following topics: basics, template syntax,
-									components, events, instance lifecyle, vue router, Vuex, and more.</p>
+									components, events, instance lifecyle, vue router, Vuex, and more.</p><br>
+									<a href="https://github.com/kwall925/vue-bootcamp" class='main-btn'>view project</a>
 									</div>
     					</div>
     					<div class="carousel-item">
@@ -57,23 +58,23 @@
 								</div>
     					</div>
 							<div class="carousel-item">
- 			     			<img class="d-block w-100" src="images/ui-library.png" alt="Fourth slide" style="height: 500px;">
+ 			     			<img class="d-block w-100" src="images/ui-library.png" alt="Fifth slide" style="height: 500px;">
  			     				<div class='description'><h2 class='bb'>UI Library</h2><br><p>UI components I am creating for quick reusability and to create
 										a personal style that is consistent across projects. Work in progress.</p> <br><a href='https://github.com/kwall925/ui-library' class='main-btn'> view project</a>
 								</div>
     					</div>
 							<div class="carousel-item">
-								<img class="d-block w-100" src="images/lewagon.png" alt="Fourth slide" style="height: 500px;">
+								<img class="d-block w-100" src="images/lewagon.png" alt="Sixth slide" style="height: 500px;">
 									<div class='description'><h2 class='bb'>Fullstack Challenges</h2><br><p>Challenges completed during
 										9-week intensive bootcamp Le Wagon. Modules include Ruby, OOP, Databases, Front End with vanilla JS,
 										and Ruby on Rails.</p><br><a href='https://www.lewagon.com/web-development-course/full-time#curriculum' class='main-btn'> view project</a>
 								</div>
 							</div>
 							<div class="carousel-item">
-								<img class="d-block w-100" src="images/ui-design.png" alt="Fourth slide" style="height: 500px;">
+								<img class="d-block w-100" src="images/ui-design.png" alt="Seventh slide" style="height: 500px;">
 									<div class='description'><h2 class='bb'>UI Design Bootcamp</h2><br><p>A bootcamp I recently completed focusing
 									on UI Design. Topics covered include: UI fundamentals, landing page layout, different approaches
-									for responsive development, gradients, shadows, forms, animations, and many more. <a href='https://github.com/kwall925/ui-library' class='descLink'> view project</a></p>
+									for responsive development, gradients, shadows, forms, animations, and many more. <a href='https://scrimba.com/learn/designbootcamp' class='main-btn'>view project</a></p>
 								</div>
 							</div>
   					</div>
