fixed faulty links pt.2

--- a/recent.html
+++ b/recent.html
@@ -74,7 +74,8 @@
 								<img class="d-block w-100" src="images/ui-design.png" alt="Seventh slide" style="height: 500px;">
 									<div class='description'><h2 class='bb'>UI Design Bootcamp</h2><br><p>A bootcamp I recently completed focusing
 									on UI Design. Topics covered include: UI fundamentals, landing page layout, different approaches
-									for responsive development, gradients, shadows, forms, animations, and many more. <a href='https://scrimba.com/learn/designbootcamp' class='main-btn'>view project</a></p>
+									for responsive development, gradients, shadows, forms, animations, and many more.</p><br>
+									 <a href='https://scrimba.com/learn/designbootcamp' class='main-btn'>view project</a>
 								</div>
 							</div>
   					</div>
