--- a/skills.html
+++ b/skills.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/skills.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<script src="js/skills.js"></script>
 	<title>Ken Wall | Front End Developer</title>
 </head>
