--- a/index.html
+++ b/index.html
@@ -55,5 +55,13 @@
             <source src="images/video.mp4" type="video/mp4">
           </video>
 
+          <script type="text/javascript">
+            $(document).ready(function(){
+               setTimeout(function(){
+                  PopUp();
+               },3000); // 5000 to load it after 5 seconds from page load
+              });
+          </script>
+
 </body>
 </html>
