testing new nav features

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <script src="js/main.js" async defer></script>
   <script src="js/video.js" async defer></script>
+  <script src="js/miniNav.js" async defer></script>
 </head>
 <body>
             <section id="wrapper">
 
+              <div class="burger">
+                <img src="images/burger.svg" alt="click here for navigation">
+              </div>
               <div class="viewport">
                 <div class='homeImg'>
                   <img src="images/wdev.svg" alt="ken wall web developer">
@@ -29,7 +33,7 @@
                     <div class="cube-image"><p class='newText'>Ken Wall</p></div>
                   </div>
                   <div class="side">
-                    <div class="cube-image"><a href='skills.html'><img src='images/info.png' class='cubeImg'><p class='subtext padd'>More Info</p></a></div>
+                    <div class="cube-image"><a href='recent.html'><img src='images/recentW.svg' style='margin-top: 3.5em;' class='cubeImg'><p class='subtext padd'>Recent Work</p></a></div>
                   </div>
                   <div class="side">
                     <div class="cube-image active"><a href='writings.html'><img src='images/typewriter.png' class='cubeImg'><p class='subtext padd'>Writings</p></a></div>
@@ -46,8 +50,9 @@
             <nav class="classicNav">
               <img src="images/delete.svg" id='closeNav'>
               <li><a href='skills.html'>Skills</a></li>
-              <li><a href='recent.html'>Recent Work</a></li>
               <li><a href='contact.html'>Contact</a></li>
+              <li><a href='resources.html'>Resources</a></li>
+              <li><a href='recent.html'>Recent Work</a></li>
               <!-- <li><a href='contact.html'>Resources</a></li> -->
             </nav>
             <!--<div class="nextdiv"><a href='#'>
