continued testing of responsive navs

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
               <div class="burger">
                 <img src="images/burger.svg" alt="click here for navigation">
               </div>
+
+              <div class="miniNav">
+                <li><a href='skills.html'>Skills</a></li>
+                <li><a href='contact.html'>Contact</a></li>
+                <li><a href='resources.html'>Resources</a></li>
+                <li><a href='recent.html'>Recent Work</a></li>
+              </div>
+
               <div class="viewport">
                 <div class='homeImg'>
                   <img src="images/wdev.svg" alt="ken wall web developer">
