home nav problems solved

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
               </div>
 
               <div class="miniNav">
+                <div class="close">
+                  <img src="images/delete.svg">
+                </div>
                 <li><a href='skills.html'>Skills</a></li>
                 <li><a href='contact.html'>Contact</a></li>
                 <li><a href='resources.html'>Resources</a></li>
