--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <img class='next' src="images/next.svg"></a>-->
           </section>
 
-          <video playsinline autoplay muted loop poster="images/video.mp4" id="bgvid">
+          <video playsinline autoplay muted loop controls="false" poster="images/video.mp4" id="bgvid">
             <source src="images/video.mp4" type="video/mp4">
           </video>
 
