--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@
               <img class='next' src="images/next.svg"></a>-->
           </section>
 
-          <video playsinline autoplay muted loop poster="images/video.mp4" id="bgvid">
+          <video playsinline autoplay muted loop id="bgvid">
             <source src="images/video.mp4" type="video/mp4">
           </video>
-          <script>
-            document.getElementById("bgvid").play();
-          </script>
 
 </body>
 </html>
