responsive fixes for contact

--- a/contact.html
+++ b/contact.html
@@ -12,27 +12,24 @@
 		<a href="contact.html" class='active'>Contact</a>
 	</nav>
 	<section class="flex">
-
+			<h1 class="contact">Contact Me</h1>
 			<div class="flexchild">
-			<form class='main-form'>
-		      <label for="Name" placeholder='name'>Your Name</label>
-		      <input type="text">
-		      <label for="company">Company</label>
-		      <input type="text">
-		      <label for="email">Your Email</label>
-		      <input type="text">
-		      <label for="">Options</label>
-		      <input type="text">
-		      <a href="#" class='main-btn'>Submit</a>
-	    	</form>
+				<form class='main-form'>
+			      <label for="Name" placeholder='name'>Name</label>
+			      <input type="text">
+			      <label for="email">Email</label>
+			      <input type="text">
+			      <label for="">Message</label>
+			      <textarea rows="13"></textarea>
+			      <a href="#" class='main-btn'>Submit</a>
+		    	</form>
 			</div>
 
-			<div class='flexchild'>
-					<div class='watermark'></div>
-					<h1 class='feskills'>Contact<br>Me</h1>
-				</div>
+			<!-- <div class='flexchild'>
+					<!-- <div class='watermark'></div> -->
+					<!-- <h1 class='feskills'>Contact<br>Me</h1>
+				</div> -->
 				<!-- <img src="images/loaf-message-3.svg" class='watermark'> -->
-			</div>
 
   </section>
 </body>
