--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
 		    	</form>
 			</div>
 
-			<!-- <div class='flexchild'>
-					<!-- <div class='watermark'></div> -->
-					<!-- <h1 class='feskills'>Contact<br>Me</h1>
-				</div> -->
+				<div class='flexchild'>
+					<!--<div class='watermark'></div>-->
+					<h1 class='feskills'>Contact<br>Me</h1>
+				</div>
 				<!-- <img src="images/loaf-message-3.svg" class='watermark'> -->
 
   </section>
