contact form fixed and some design tweaks

--- a/contact.html
+++ b/contact.html
@@ -14,14 +14,14 @@
 	<section class="flex">
 			<h1 class="contact">Contact Me</h1>
 			<div class="flexchild">
-				<form class='main-form'>
+				<form class='main-form'name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
 			      <label for="Name" placeholder='name'>Name</label>
 			      <input type="text">
 			      <label for="email">Email</label>
 			      <input type="text">
 			      <label for="">Message</label>
 			      <textarea rows="13"></textarea>
-			      <a href="#" class='main-btn'>Submit</a>
+			      <a href="#" type='submit' class='main-btn'>Submit</a>
 		    	</form>
 			</div>
 
