testing form functionality

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 			      <input type="text">
 			      <label for="">Message</label>
 			      <textarea rows="13"></textarea>
-			      <a href="#" type='submit' class='main-btn'>Submit</a>
+			      <button type='submit' class='main-btn'>Submit</button>
 		    	</form>
 			</div>
 
