responsive fixes for recent

--- a/recent.html
+++ b/recent.html
@@ -5,12 +5,28 @@
 	<meta name="description" content="Recent work done by Ken Wall, front end developer. Work done in HTML, CSS, Javascript, Vue js, and UI design."/>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/recent.css">
+	<script src="js/miniNav.js" async defer></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <!-- 	<script src="js/video.js" async defer></script>
  --></head>
 <body>
+
+	<div class="burger">
+		<img src="images/burger.svg" alt="click here for navigation">
+	</div>
+
+	<div class="miniNav">
+		<div class="close">
+			<img src="images/delete.svg">
+		</div>
+		<li><a href='skills.html'>Skills</a></li>
+		<li><a href='contact.html'>Contact</a></li>
+		<li><a href='resources.html'>Resources</a></li>
+		<li><a href='recent.html'>Recent Work</a></li>
+	</div>
+
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="skills.html">Skills/Services</a>
