responsive fixes for skills page

--- a/skills.html
+++ b/skills.html
@@ -4,9 +4,25 @@
 	<link rel="stylesheet" type="text/css" href="css/skills.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<script src="js/skills.js"></script>
+	<script src="js/miniNav.js" async defer></script>
 	<title>Ken Wall | Front End Developer</title>
 </head>
 <body>
+
+	<div class="burger">
+		<img src="images/burger.svg" alt="click here for navigation">
+	</div>
+
+	<div class="miniNav">
+		<div class="close">
+			<img src="images/delete.svg">
+		</div>
+		<li><a href='skills.html'>Skills</a></li>
+		<li><a href='contact.html'>Contact</a></li>
+		<li><a href='resources.html'>Resources</a></li>
+		<li><a href='recent.html'>Recent Work</a></li>
+	</div>
+
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="skills.html" class='active'>Skills/Services</a>
@@ -58,7 +74,7 @@
 		  </p>
 		</div>
 		</div>
-		<div class="nextdiv"><a href='#'><img class='next' src="images/next.svg"></a></div>
+		<!-- <div class="nextdiv"><a href='#'><img class='next' src="images/next.svg"></a></div> -->
   </section>
 </body>
 </html>
