--- a/writings.html
+++ b/writings.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Writings by Ken Wall</title>
+    <link rel="stylesheet" href="css/writings.css">
   </head>
   <body>
-    <p>coming soon</p>
+    <p class='soon'>coming soon</p>
   </body>
 </html>
